--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "dist/index.d.ts",
   "files": [
     "dist/",
-    "src/",
+    "!**/*.map",
     "!**/*.test.*"
   ],
   "scripts": {
