--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: node_js
 node_js:
-  - "node"
-  - "10"
-  - "8"
+    - 'node'
+    - '14'
+    - '12'
 script:
-  - npm install
-  - npm run build
-  - npm test
-  - npm run travis-coverage
+    - npm install
+    - npm test
