--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc",
     "clean": "rimraf ./dist/",
     "coverage": "npm run generate-code-coverage",
+    "prepare": "npm run build",
     "generate-code-coverage": "NODE_ENV=test nyc npm run test-ts",
     "test-ts": "NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
     "test-watch": "npm run build && mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
@@ -71,6 +72,7 @@
       "ts-node/register"
     ],
     "reporter": [
+      "lcov",
       "json",
       "html"
     ]
