--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc",
     "clean": "rimraf ./dist/",
     "coverage": "npm run generate-code-coverage",
+    "prepare": "npm run build",
     "generate-code-coverage": "NODE_ENV=test nyc npm run test-ts",
     "test-ts": "NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
     "test-watch": "npm run build && mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
@@ -42,18 +43,18 @@
   },
   "homepage": "https://github.com/Jason3S/iterable-to-stream#readme",
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/lorem-ipsum": "^1.0.2",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^8.10.49",
-    "chai": "^4.2.0",
-    "coveralls": "^3.0.4",
-    "lorem-ipsum": "^1.0.6",
-    "mocha": "^6.1.4",
-    "nyc": "^14.1.1",
-    "rimraf": "^2.6.3",
-    "ts-node": "^8.2.0",
-    "typescript": "^3.5.1"
+    "@types/chai": "^4.2.18",
+    "@types/lorem-ipsum": "^2.0.0",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^12.20.12",
+    "chai": "^4.3.4",
+    "coveralls": "^3.1.0",
+    "lorem-ipsum": "^2.0.3",
+    "mocha": "^8.4.0",
+    "nyc": "^15.1.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "dependencies": {},
   "nyc": {
@@ -71,6 +72,7 @@
       "ts-node/register"
     ],
     "reporter": [
+      "lcov",
       "json",
       "html"
     ]
